# 15-puzzle-solver

./: .gitignore  CMakeLists.txt  README.md  a.out  puzzle.txt  vis.py
include/: edge.hpp  graph.hpp  helper.hpp  heuristics.hpp  node.hpp  parser.hpp  program-state.hpp  queue.hpp  solver.hpp  state.hpp
puzzles/: 1.txt  one.txt  three.txt  two.txt
samples/: linear-conflict
samples/3/solvable/: 0  4  5  6  7  8
samples/3/unsolvable/: 1  2  4  5  6  7  9
samples/4/solvable/: 0  1  2  3  4  5  6  7  8  9
samples/4/unsolvable/: 0  1  2  3  4  5  6  7  8  9
samples/bad/: 0
samples/solvable/: 1  2  3  9
samples/unsolvable/: 0  3  8
scripts/: genNPuzzle.py  npuzzle-gen.py  test.sh
src/: heuristics.cpp  main.cpp  parser.cpp  program-state.hpp  queue.hpp  solver.cpp  state.cpp  state.hpp
tests/: a.out  main.cpp
